crates/keron-lang/tests/corpus/errors/check/nullable_match_missing_null_arm.snap
---
source: crates/keron-lang/tests/harness/mod.rs
assertion_line: 75
---
error: non-exhaustive `match` on `String?`: missing a `null` arm (or a wildcard `_`)
  --> 3:26
  |
3 | val name: String = match maybe_name {
  |                          ^^^^^^^^^^
